--- a/package.json
+++ b/package.json
@@ -4,21 +4,35 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.4.2",
+    "@react-navigation/material-top-tabs": "^7.3.2",
     "@react-navigation/native": "^7.1.14",
+    "axios": "^1.11.0",
     "expo": "~53.0.17",
+    "expo-clipboard": "~7.1.5",
+    "expo-constants": "~17.1.7",
+    "expo-font": "~13.3.2",
+    "expo-image-picker": "~16.1.4",
+    "expo-network": "~7.1.5",
+    "expo-notifications": "~0.31.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
+    "lottie-react-native": "7.2.2",
+    "moment-jalaali": "^0.10.4",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-animatable": "^1.4.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "expo-font": "~13.3.2",
-    "expo-splash-screen": "~0.30.10"
+    "react-native-webview": "13.13.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
