--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.79.5",
     "react-native-animatable": "^1.4.0",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-otp-entry": "^1.8.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-webview": "13.13.5",
