--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-image-picker": "~16.1.4",
+    "expo-localization": "~16.1.6",
     "expo-network": "~7.1.5",
     "expo-notifications": "~0.31.4",
     "expo-splash-screen": "~0.30.10",
@@ -29,13 +30,13 @@
     "react-native": "0.79.5",
     "react-native-animatable": "^1.4.0",
     "react-native-image-viewing": "^0.2.2",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-otp-entry": "^1.8.5",
+    "react-native-pager-view": "6.7.1",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-webview": "13.13.5",
-    "socket.io-client": "^4.8.1",
-    "react-native-pager-view": "6.7.1",
-    "expo-localization": "~16.1.6"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
